<?xml version="1.0"?>
<package format="2">
  <name>robot_interface</name>
  <description>Provides client classes for interfacing with a generic robotic platform.</description>
  <version>1.0.0</version>

  <maintainer email="avonsternberg@lanl.gov">Alex von Sternberg</maintainer>
  <license>Proprietary</license>
  <author email="avonsternberg@lanl.gov">Alex von Sternberg</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rviz</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

</package>
