<?xml version="1.0"?>
<package>
  <name>sweep_gui</name>
  <version>0.1.0</version>
  <description>

     sweep_gui

  </description>
  <maintainer email="avonsternberg@gmail.com">Alex von Sternberg</maintainer>
  <author>Alex von Sternberg</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>full_coverage</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>full_coverage</run_depend>
  <run_depend>roscpp</run_depend>

 
</package>
