<?xml version="1.0"?>
<package format="2">
  <name>navigation_tools</name>
  <version>0.0.0</version>
  <description>
    General tools to assist with navigation in semi-controlled environments.
  </description>
  <maintainer email="mlsymmank@lanl.gov">Meredith Symmank</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rolling_map</exec_depend>
  <exec_depend>markers_to_map</exec_depend>
  <exec_depend>clear_area_recovery</exec_depend>
  <exec_depend>rotate_theta_recovery</exec_depend>
  <exec_depend>velodyne_orient</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>