<?xml version="1.0"?>
<package>
  <name>velodyne_orient</name>
  <version>1.0.0</version>
  <description>The velodyne_orient package. This node takes the raw velodyne point cloud, and uses it to publish the velodyne frame position </description>

  <maintainer email="avonsternberg@lanl.gov">Alex von Sternberg</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>pcl</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>

</package>
